// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game Display it should be able to render the game view for Assign 1`] = `
<div
  class="row"
  data-testid="game-display"
>
  <div
    class="col-3"
  >
    <h2>
      Players are beginning to lie left right and center
    </h2>
  </div>
  <div
    class="col-9"
  >
    <div
      class="flex-center-center"
      data-testid="at-game-board"
    >
      <div
        data-testid="at-pyramid"
      >
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-5"
            style="background-position: -395px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-1"
            style="background-position: -79px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-10"
            style="background-position: -790px -0px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-2"
            style="background-position: -158px -0px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-3"
            style="background-position: -237px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-7"
            style="background-position: -553px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-0"
            style="background-position: -0px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-10"
            style="background-position: -790px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-10"
            style="background-position: -790px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-7"
            style="background-position: -553px -369px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-2"
            style="background-position: -158px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-1"
            style="background-position: -79px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-12"
            style="background-position: -948px -369px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-0-12"
            style="background-position: -948px -0px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-1-12"
            style="background-position: -948px -123px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Game Display it should be able to render the game view for Bullshit 1`] = `
<div
  class="row"
  data-testid="game-display"
>
  <div
    class="col-3"
  >
    <h2>
      People should know who you think was lieing
    </h2>
  </div>
  <div
    class="col-9"
  >
    <div
      class="flex-center-center"
      data-testid="at-game-board"
    >
      <div
        data-testid="at-pyramid"
      >
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-5"
            style="background-position: -395px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-1"
            style="background-position: -79px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-10"
            style="background-position: -790px -0px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-2"
            style="background-position: -158px -0px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-3"
            style="background-position: -237px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-7"
            style="background-position: -553px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-0"
            style="background-position: -0px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-10"
            style="background-position: -790px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-10"
            style="background-position: -790px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-7"
            style="background-position: -553px -369px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-2"
            style="background-position: -158px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-1"
            style="background-position: -79px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-12"
            style="background-position: -948px -369px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-0-12"
            style="background-position: -948px -0px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-1-12"
            style="background-position: -948px -123px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Game Display it should be able to render the game view for Complete 1`] = `
<div
  class="row"
  data-testid="game-display"
>
  <div
    class="col-3"
  >
    <h2>
      Well time for a new game
    </h2>
    <div
      class="stack-y-2"
    >
      <button
        class="pure-button pure-button-primary"
      >
        Start a new game with same players
      </button>
      <button
        class="pure-button pure-button-secondary"
      >
        Host a new game
      </button>
    </div>
  </div>
  <div
    class="col-9"
  >
    <div
      class="flex-center-center"
      data-testid="at-game-board"
    >
      <div
        data-testid="at-pyramid"
      >
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-5"
            style="background-position: -395px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-1"
            style="background-position: -79px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-10"
            style="background-position: -790px -0px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-2"
            style="background-position: -158px -0px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-3"
            style="background-position: -237px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-7"
            style="background-position: -553px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-0"
            style="background-position: -0px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-10"
            style="background-position: -790px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-10"
            style="background-position: -790px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-7"
            style="background-position: -553px -369px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-2"
            style="background-position: -158px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-1"
            style="background-position: -79px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-12"
            style="background-position: -948px -369px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-0-12"
            style="background-position: -948px -0px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-1-12"
            style="background-position: -948px -123px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Game Display it should be able to render the game view for Declaration 1`] = `
<div
  class="row"
  data-testid="game-display"
>
  <div
    class="col-3"
  >
    <h2>
      Let the world know if you have it
    </h2>
    <div
      class="stack-y-2"
    />
  </div>
  <div
    class="col-9"
  >
    <div
      class="flex-center-center"
      data-testid="at-game-board"
    >
      <div
        data-testid="at-pyramid"
      >
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-5"
            style="background-position: -395px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-1"
            style="background-position: -79px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-10"
            style="background-position: -790px -0px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-2"
            style="background-position: -158px -0px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-3"
            style="background-position: -237px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-7"
            style="background-position: -553px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-0"
            style="background-position: -0px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-10"
            style="background-position: -790px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-10"
            style="background-position: -790px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-7"
            style="background-position: -553px -369px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-2"
            style="background-position: -158px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-1"
            style="background-position: -79px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-12"
            style="background-position: -948px -369px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-0-12"
            style="background-position: -948px -0px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-1-12"
            style="background-position: -948px -123px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Game Display it should be able to render the game view for Flipping 1`] = `
<div
  class="row"
  data-testid="game-display"
>
  <div
    class="col-3"
  >
    <h2>
      The host is flipping a card
    </h2>
  </div>
  <div
    class="col-9"
  >
    <div
      class="flex-center-center"
      data-testid="at-game-board"
    >
      <div
        data-testid="at-pyramid"
      >
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-5"
            style="background-position: -395px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-1"
            style="background-position: -79px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-10"
            style="background-position: -790px -0px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-2"
            style="background-position: -158px -0px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-3"
            style="background-position: -237px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-7"
            style="background-position: -553px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-0"
            style="background-position: -0px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-10"
            style="background-position: -790px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-10"
            style="background-position: -790px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-7"
            style="background-position: -553px -369px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-2"
            style="background-position: -158px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-1"
            style="background-position: -79px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-12"
            style="background-position: -948px -369px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-0-12"
            style="background-position: -948px -0px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-1-12"
            style="background-position: -948px -123px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Game Display it should be able to render the game view for Initiation 1`] = `
<div
  class="row"
  data-testid="game-display"
>
  <div
    class="col-3"
  >
    
    <div
      class="stack-y-2"
    >
      <h2>
        To join the game go to:
      </h2>
      <ul>
        <li>
          <a
            href="/game/join/mwif"
          >
            Go to the join screen
          </a>
        </li>
        <li>
          Or type in 
          <strong>
            mwif
          </strong>
           at https://bullsh-pyramid.now.sh/game/join
        </li>
      </ul>
      <h3>
        Players Joined
      </h3>
    </div>
  </div>
  <div
    class="col-9"
  />
</div>
`;

exports[`Game Display it should be able to render the game view for Memorization 1`] = `
<div
  class="row"
  data-testid="game-display"
>
  <div
    class="col-3"
  >
    <h2>
      You have 30s to remember your cards!
    </h2>
  </div>
  <div
    class="col-9"
  >
    <div
      class="flex-center-center"
      data-testid="at-game-board"
    >
      <div
        data-testid="at-pyramid"
      >
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-5"
            style="background-position: -395px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-1"
            style="background-position: -79px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-10"
            style="background-position: -790px -0px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-2"
            style="background-position: -158px -0px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-3"
            style="background-position: -237px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-7"
            style="background-position: -553px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-0"
            style="background-position: -0px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-10"
            style="background-position: -790px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-10"
            style="background-position: -790px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-7"
            style="background-position: -553px -369px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-2"
            style="background-position: -158px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-1"
            style="background-position: -79px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-12"
            style="background-position: -948px -369px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-0-12"
            style="background-position: -948px -0px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-1-12"
            style="background-position: -948px -123px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Game Display it should be able to render the game view for Memory 1`] = `
<div
  class="row"
  data-testid="game-display"
>
  <div
    class="col-3"
  >
    <h2>
      Well which cards did you have?
    </h2>
  </div>
  <div
    class="col-9"
  >
    <div
      class="flex-center-center"
      data-testid="at-game-board"
    >
      <div
        data-testid="at-pyramid"
      >
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-5"
            style="background-position: -395px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-1"
            style="background-position: -79px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-10"
            style="background-position: -790px -0px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-2"
            style="background-position: -158px -0px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-3"
            style="background-position: -237px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-7"
            style="background-position: -553px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-0"
            style="background-position: -0px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-10"
            style="background-position: -790px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-10"
            style="background-position: -790px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-7"
            style="background-position: -553px -369px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-2"
            style="background-position: -158px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-1"
            style="background-position: -79px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-12"
            style="background-position: -948px -369px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-0-12"
            style="background-position: -948px -0px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-1-12"
            style="background-position: -948px -123px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Game Display it should be able to render the game view for Reveal 1`] = `
<div
  class="row"
  data-testid="game-display"
>
  <div
    class="col-3"
  >
    <h2>
      We all now know the truth
    </h2>
  </div>
  <div
    class="col-9"
  >
    <div
      class="flex-center-center"
      data-testid="at-game-board"
    >
      <div
        data-testid="at-pyramid"
      >
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-5"
            style="background-position: -395px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-1"
            style="background-position: -79px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-10"
            style="background-position: -790px -0px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-0-2"
            style="background-position: -158px -0px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-3"
            style="background-position: -237px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-1-7"
            style="background-position: -553px -123px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-0"
            style="background-position: -0px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-10"
            style="background-position: -790px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-10"
            style="background-position: -790px -369px;"
          />
          <div
            class="flex-center-center card cardHidden"
            data-testid="card-3-7"
            style="background-position: -553px -369px;"
          />
        </div>
        <div
          class="flex-center-center stack-y-3"
        >
          <div
            class="flex-center-center card"
            data-testid="card-1-2"
            style="background-position: -158px -123px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-2-1"
            style="background-position: -79px -246px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-3-12"
            style="background-position: -948px -369px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-0-12"
            style="background-position: -948px -0px;"
          />
          <div
            class="flex-center-center card"
            data-testid="card-1-12"
            style="background-position: -948px -123px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
